[gd_scene load_steps=2 format=3 uid="uid://dkxb0y41lwj3s"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_1bfbw"]

[node name="Login" type="Node"]
script = ExtResource("1_1bfbw")

[node name="AccountName" type="LineEdit" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -15.5
offset_right = 100.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("../AccountPassword")
focus_previous = NodePath("../Connect")
text = "kf"
placeholder_text = "Account name..."

[node name="AccountPassword" type="LineEdit" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 30.5
offset_right = 100.0
offset_bottom = 61.5
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("../Connect")
focus_previous = NodePath("../AccountName")
text = "Test_1234"
placeholder_text = "Password..."
secret = true

[node name="ErrorLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = 77.5
offset_right = 250.0
offset_bottom = 100.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
horizontal_alignment = 1

[node name="Connect" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = 118.5
offset_right = 38.5
offset_bottom = 149.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
focus_next = NodePath("../AccountName")
focus_previous = NodePath("../AccountPassword")
text = "Connect"

[node name="Button2" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -134.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Create Acccount"

[node name="ErrorLabelTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="timeout" from="ErrorLabelTimer" to="." method="_on_error_label_timer_timeout"]
